# computer-vision

./: .gitignore  CMakeLists.txt  README.md  TODO.md
.github/workflows/: ci.yml
assets/: icon.aseprite  icon.rc
assets/sprites/: background.aseprite  bubble.aseprite  heart.aseprite  skull.aseprite
include/: application.h  background_estimator.h  event.h  event_receiver.h  gui.h  hand_detector.h  logging.h  message_queue.h  motion_detector.h  position_tracker.h  rect_helper.h  sdl_opencv_helper.h  skin_tone_calibrator.h  skin_tone_detector.h  state.h  webcam.h
mediapipe-demo/: .gitignore  Pipfile  README.md  main.py
misc/: README.md  computer-vision.rdbg  computer-vision.sublime-project  computervision (Debug).sln  computervision (RelWithDebInfo).sln
src/: application.cpp  background_estimator.cpp  gui.cpp  hand_detector.cpp  main.cpp  motion_detector.cpp  position_tracker.cpp  rect_helper.cpp  sdl_opencv_helper.cpp  skin_tone_calibrator.cpp  skin_tone_detector.cpp  webcam.cpp
